@startuml

title __SPEEDCARDGAME.APP's Class Diagram__\n

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.BroadcastBattery {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.BuildConfig {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.Cards {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.ChampActivity {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.DBHelper {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.GameActivity {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.GameStrategy {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.Levels {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.LoginActivity {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.MainActivity {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.PlayActivity {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.PlayService {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.ScoresActivity {
    }
  }
  

  namespace com.example.speedcardgame {
    class com.example.speedcardgame.SplashScreenActivity {
    }
  }
  

  com.example.speedcardgame.BroadcastBattery -up-|> android.content.BroadcastReceiver
  com.example.speedcardgame.ChampActivity .up.|> android.view.View.OnClickListener
  com.example.speedcardgame.ChampActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.speedcardgame.DBHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.example.speedcardgame.GameActivity .up.|> android.view.View.OnClickListener
  com.example.speedcardgame.GameActivity .up.|> android.view.View.OnDragListener
  com.example.speedcardgame.GameActivity .up.|> android.view.View.OnTouchListener
  com.example.speedcardgame.GameActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.speedcardgame.GameActivity o-- com.example.speedcardgame.GameStrategy : gameStrategy
  com.example.speedcardgame.GameActivity o-- com.example.speedcardgame.Cards : topDesk1
  com.example.speedcardgame.GameActivity o-- com.example.speedcardgame.Cards : topDesk2
  com.example.speedcardgame.LoginActivity .up.|> android.view.View.OnClickListener
  com.example.speedcardgame.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.speedcardgame.MainActivity .up.|> android.view.View.OnClickListener
  com.example.speedcardgame.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.speedcardgame.MainActivity o-- com.example.speedcardgame.Levels : levels
  com.example.speedcardgame.PlayActivity .up.|> android.view.View.OnClickListener
  com.example.speedcardgame.PlayActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.speedcardgame.PlayService .up.|> android.media.MediaPlayer.OnBufferingUpdateListener
  com.example.speedcardgame.PlayService .up.|> android.media.MediaPlayer.OnCompletionListener
  com.example.speedcardgame.PlayService .up.|> android.media.MediaPlayer.OnErrorListener
  com.example.speedcardgame.PlayService .up.|> android.media.MediaPlayer.OnInfoListener
  com.example.speedcardgame.PlayService .up.|> android.media.MediaPlayer.OnPreparedListener
  com.example.speedcardgame.PlayService .up.|> android.media.MediaPlayer.OnSeekCompleteListener
  com.example.speedcardgame.PlayService -up-|> android.app.Service
  com.example.speedcardgame.ScoresActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.speedcardgame.ScoresActivity o-- com.example.speedcardgame.DBHelper : dataManager
  com.example.speedcardgame.ScoresActivity o-- com.example.speedcardgame.Levels : levels
  com.example.speedcardgame.SplashScreenActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
